--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
 	<head>
 		<title>
-			"The" Title
+			NANANANANANANANANANANANANANANA
 		</title>
 		<meta charset="utf-8"/>
 	</head>
 	<body>
 		<h1>
-			"The" Heading
+			BATMAN!
 		</h1>
 		<p>
-			"The" Paragraph content.
+			~(*>*~ )
 		</p>
 	</body>
 </html>
