--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html>
 	<head>
 		<title>
-			NANANANANANANANANANANANANANANA
+			Jonathan Suepha's Web Design Site
 		</title>
 		<meta charset="utf-8"/>
 	</head>
 	<body>
 		<h1>
-			BATMAN!
+			Welllllcome
 		</h1>
 		<p>
-			~(*>*~ )
+			BRRRRRRRRR JOHN CENA
 		</p>
+	
 	</body>
 </html>
