Actually did the assignment

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 	</head>
 	<body>
 		<h1>
-			Welllllcome
+			Welcome
 		</h1>
 		<p>
-			BRRRRRRRRR JOHN CENA
+			This website will contain projects completed for the Web Design part of Computer Science 1 at CMIS.
 		</p>
-	
+		<nav>
+		</nav>
+		<footer>
+			©2015 Jonathan Suepha - CMIS Web Design
+		</footer>
 	</body>
 </html>
