--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 	</head>
 	<body>
 		<h1>
-			Welcome
+			Jonathan Suepha's Web Design Site
 		</h1>
+		<header>
+		<h2>
+			Welcome
+		</h2>
+		<header>
 		<p>
 			This website will contain projects completed for the Web Design part of Computer Science 1 at CMIS.
 		</p>
