--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h2>
 			Welcome
 		</h2>
-		<header>
+		</header>
 		<p>
 			This website will contain projects completed for the Web Design part of Computer Science 1 at CMIS.
 		</p>
