--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<link rel="stylesheet" href="main.css" type="text/css">
 <html>
 	<head>
 		<title>
@@ -25,3 +26,5 @@
 		</footer>
 	</body>
 </html>
+
+
