--- a/listandlinks/index.html
+++ b/listandlinks/index.html
@@ -13,16 +13,94 @@
 		</h1>
 		<header>
 		<h2>
-			Welcome
+			Creating a Webpage on the Production Server
 		</h2>
 		</header>
 		<p>
-			This website will contain projects completed for the Web Design part of Computer Science 1 at CMIS.
+			<h3>
+				Step by Step
+			</h3>
+				<ol>
+					<li>
+					After cloning your repository and accessing it through terminal, create two new gedit files named "index.html" and "main.css"
+					</li>
+					<li>
+					Edit your webpage using HTML code for index, then link it with main.css and use CSS to customize the look of your website.
+					</li>
+					<li>
+					Save your files, and use the git commands to save it on GitHub for safety.
+					</li>
+					<li>
+					In terminal, access the production server using "sftp [name-id]@cmis-hsteacher". Add the production server to your known servers if it's the first time accessing it, and enter your password. Be sure to have moved to the location of your file before accessing the servers
+					</li>
+					<li>
+					Once in the production server, move into the "public_html" folder.
+					</li>
+					<li>
+					You can add files using "put [file name]" and remove them using "rm [file name]".
+					</li>
+					<li>
+					Whilst having your terminal out with the production server accessed, you can view your work by opening a browser and typing "cmis-hsteacher/~[name-id]" in the address bar.
+					</li>	
+				</ol>
+			<h3>
+				Helpful Links
+			</h3>
+				<ul>
+					<li>
+						http://www.w3schools.com/default.asp
+					</li>
+					<li>
+						https://www.codecademy.com/
+					</li>
+					<li>
+						http://htmldog.com/
+					</li>
+					<li>
+						https://developer.mozilla.org/en-US/
+					</li>
+					<li>
+						http://html.net/
+					</li>
+				</ul>
 		</p>
 		<nav>
+			<ul>
+				<li>
+					<a href="..">Back to HomePage</a>
+				</li>
+			</ul>
 		</nav>
 		<footer>
 			©2015 Jonathan Suepha - CMIS Web Design
+			<h4>
+				Creating List and Links
+			</h4>
+			<ul>
+				<li>
+					Create a new folder called "listsandlinks" in your repository folder.
+				</li>
+				<li>
+					Inside listsandlinks create a file called "index.html" and a file called "main.css"
+				</li>
+				<li>
+					In index.html create an ordered list of step by step instructions to create a new webpage on the production server.
+				</li>
+				<li>
+					Also create an unordered list of 5 or more links to websites with useful webdesign related information.
+				</li>
+				<li>
+					In the nav section, create an unordered list of links with a link back to your main index page.
+				</li>
+				<li>
+					In your main index.html file in public_html, add an unordered list of links to the nav section with a link to "listsandlinks".
+				</li>
+				<li>
+					In your old index.html, add an article with a heading and a paragraph description of this assignment. Also add an unordered list that contains this list of requirements. 
+				</li>
+				<li>
+					Turn in your work.
+				</li>
 		</footer>
 	</body>
 </html>
