Changed Link list

--- a/listandlinks/index.html
+++ b/listandlinks/index.html
@@ -48,19 +48,19 @@
 			</h3>
 				<ul>
 					<li>
-						http://www.w3schools.com/default.asp
+						<a href="http://www.w3schools.com/default.asp">w3school</a>
 					</li>
 					<li>
-						https://www.codecademy.com/
+						<a href="https://www.codecademy.com/">CodeAcademy</a>
 					</li>
 					<li>
-						http://htmldog.com/
+						/<a href="http://htmldog.com"> HTML Dog</a>
 					</li>
 					<li>
-						https://developer.mozilla.org/en-US/
+						<a href="https://developer.mozilla.org/en-US/">MDN</a>
 					</li>
 					<li>
-						http://html.net/
+						<a href="http://html.net">HTML.net</a>
 					</li>
 				</ul>
 		</p>
