--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 			This website will contain projects completed for the Web Design part of Computer Science 1 at CMIS.
 		</p>
 		<nav>
+				<a href="listandlinks">List and Links</a>
+				<a href="tables">Tables</a>
 		</nav>
 		<footer>
 			©2015 Jonathan Suepha - CMIS Web Design
