--- a/tables/index.html
+++ b/tables/index.html
@@ -24,9 +24,9 @@
 		</h2>
 			<table border="1">
 				<tr>
-					<td>A</td>
-					<td>B</td>
-					<td>C</td>
+					<td><b>A</b></td>
+					<td><b>B</b></td>
+					<td><b>C</b></td>
 				</tr>
 				<tr>
 					<td>1</td>
@@ -47,6 +47,91 @@
 					<td>12</td>
 					<td>15</td>
 					<td>18</td>
+				</tr>
+			</table>
+			<table border="1">
+				<tr>
+					<th colspan="7">
+							<b>December 2015</b>
+					</th>
+				</tr>
+				<tr>
+					<td><b>Mon</b></td>
+					<td><b>Tue</b></td>
+					<td><b>Wed</b></td>
+					<td><b>Thu</b></td>
+					<td><b>Fri</b></td>
+					<td><b>Sat</b></td>
+					<td><b>Sun</b></td>
+				</tr>
+				<tr>
+					<td> </td>
+					<td>1</td>
+					<td>2</td>
+					<td>3</td>
+					<td>4</td>
+					<td>5</td>
+					<td>6</td>
+				</tr>
+				<tr>
+					<td>7</td>
+					<td>8</td>
+					<td>9</td>
+					<td>10</td>
+					<td>11</td>
+					<td>12</td>
+					<td>13</td>
+				</tr>
+				<tr>
+					<td>14</td>
+					<td>15</td>
+					<td>16</td>
+					<td>17</td>
+					<td>18</td>
+					<td>19</td>
+					<td>20</td>
+				</tr>
+				<tr>
+					<td>21</td>
+					<td>22</td>
+					<td>23</td>
+					<td>24</td>
+					<td>25</td>
+					<td>26</td>
+					<td>27</td>
+				</tr>
+				<tr>
+					<td>28</td>
+					<td>29</td>
+					<td>30</td>
+					<td>31</td>
+					<td> </td>
+					<td> </td>
+					<td> </td>
+				</tr>
+				<tr>
+					<td colspan="7">Created by: Me!</td>
+				</tr>
+			</table>
+			<table>
+			<table border="1">
+				<tr>
+					<th><b>Period</b></th>
+					<th><b>Class Info</b></th>
+				<tr>
+				<tr>
+					<th rowspan="2"><b>1</b></th>
+					<td>Mr.Kieffer</td>
+				</tr>
+				<tr>
+					<td>Computer Science</td>
+				</tr>
+				<tr>
+					<th rowspan="2"><b>2</b></th>
+					<td>Mr. Knox</td>
+				</tr>
+				<tr>
+					<td>History</td>
 				</tr>
 			</table>
 		<nav>
