--- a/tables/index.html
+++ b/tables/index.html
@@ -49,6 +49,9 @@
 					<td>18</td>
 				</tr>
 			</table>
+		<h2>
+			Calender
+		</h2>
 			<table border="1">
 				<tr>
 					<th colspan="7">
@@ -113,6 +116,9 @@
 					<td colspan="7">Created by: Me!</td>
 				</tr>
 			</table>
+		<h2>
+			Class Schedule
+		</h2>
 			<table>
 			<table border="1">
 				<tr>
