--- a/listandlinks/index.html
+++ b/listandlinks/index.html
@@ -54,7 +54,7 @@
 						<a href="https://www.codecademy.com/">CodeAcademy</a>
 					</li>
 					<li>
-						/<a href="http://htmldog.com"> HTML Dog</a>
+						<a href="http://htmldog.com"> HTML Dog</a>
 					</li>
 					<li>
 						<a href="https://developer.mozilla.org/en-US/">MDN</a>
