--- a/final/index.html
+++ b/final/index.html
@@ -18,26 +18,28 @@
 			Cat
 		</h3>
 		<p>
-			A lovely animal. Very affectionate. Soft fur. Not agreeable.
+			With its curved blade mimicking a tiger's claw, the karambit was developed as part of the souteast Asian martial discipline of silat. The knife is typically used with a reverse grip, with the finger ring on the index finger.
 			<ul>
-				<li>furry</li>
-				<li>short</li>
-				<li>clean</li>
-				<li>Price: $500</li>
+				<li>It has been painted by airbrushing transparent paints that fade together over a chrome base coat.</li>
+				<li>Condition: Factory New</li>
+				<li>Weight: 2.3 oz</li>
+				<li>Price: $385</li>
 			</ul>
+			<img src="Karambit A.png" alt="Karambit Pattern A" style="width:304px;height:228px;">
 		</p>
 		<h3>
 			Cat
 		</h3>
 		<p>
-			A lovely animal. Very affectionate. Soft fur. Not agreeable.
+			With its curved blade mimicking a tiger's claw, the karambit was developed as part of the souteast Asian martial discipline of silat. The knife is typically used with a reverse grip, with the finger ring on the index finger.
 			<ul>
-				<li>furry</li>
-				<li>short</li>
-				<li>clean</li>
-				<li>Price: $500</li>
+				<li>It has been painted by airbrushing transparent paints that fade together over a chrome base coat.</li>
+				<li>Condition: Minimal Wear</li>
+				<li>Weight: 2.3 oz</li>
+				<li>Price: $400</li>
 			</ul>
 		</p>
+		<img src="Karambit B.png" alt="Karambit Pattern B" style="width:304px;height:228px;">
 		<p>
 		</p>
 		<p>
