--- a/final/index.html
+++ b/final/index.html
@@ -15,7 +15,7 @@
 			Stuff for Sale
 		</h2>
 		<h3> 
-			Cat
+			Karambit Fade (Pattern A)
 		</h3>
 		<p>
 			With its curved blade mimicking a tiger's claw, the karambit was developed as part of the souteast Asian martial discipline of silat. The knife is typically used with a reverse grip, with the finger ring on the index finger.
@@ -28,7 +28,7 @@
 			<img src="Karambit A.png" alt="Karambit Pattern A" style="width:304px;height:228px;">
 		</p>
 		<h3>
-			Cat
+			Karambit Fade (Pattern B)
 		</h3>
 		<p>
 			With its curved blade mimicking a tiger's claw, the karambit was developed as part of the souteast Asian martial discipline of silat. The knife is typically used with a reverse grip, with the finger ring on the index finger.
@@ -37,9 +37,48 @@
 				<li>Condition: Minimal Wear</li>
 				<li>Weight: 2.3 oz</li>
 				<li>Price: $400</li>
+				<img src="Karambit B.png" alt="Karambit Pattern B" style="width:304px;height:228px;">
 			</ul>
 		</p>
-		<img src="Karambit B.png" alt="Karambit Pattern B" style="width:304px;height:228px;">
+		<h3>
+			Butterfly Crimson Web
+		</h3>
+		<p>
+			This is a custom-designed balisong, commonly known as a butterfly knife. The defining characteristic of the weapon is the fan-like opening of a freely pivoting blade, allowing rapid deployment or concealment. As a result, butterfly knives are outlawed in many countries.
+			<ul>
+				<li>It has been painted using a spider web-patterened hydrographic over a red bas coat and finish with a semi-gloss topcoat.</li>
+				<li>Condition: Factory New</li>
+				<li>Weight: 2.3 oz</li>
+				<li>Price: $485</li>
+			</ul>
+			<img src="Butterfly A.jpg" alt="Butterfly Pattern A" style="width:304px;height:228px;">
+		</p>
+		<h3>
+			Gut Knife Marble Fade
+		</h3>
+		<p>
+			The most notable feature of a gut knife is the gut hook on the spin of the blade. Originally popularized as an aid for field dressing game, the gut hook is also effective at cutting through fibrous materials liek rope, webbing, or safety belts with ease.
+			<ul>
+				<li>It has been painted with black and silver metallic paints using a marbieizing medium, then candy coated in three colors.</li>
+				<li>Condition: Factory New</li>
+				<li>Weight: 2.3 oz</li>
+				<li>Price: $295</li>
+			</ul>
+			<img src="Gutknife MFade.jpg" alt="GutKnife Pattern A" style="width:304px;height:228px;">
+		</p>
+		<h3>
+			StatTrack™ Pizza Knife Fade
+		</h3>
+		<p>
+			Why would you need anything else.
+			<ul>
+				<li>No need for explaination</li>
+				<li>Condition: Factory New</li>
+				<li>Weight: 2.3 oz</li>
+				<li>Price: $385</li>
+			</ul>
+			<img src="PizzaKnife.jpg" alt="Aayyy" style="width:304px;height:228px;">
+		</p>
 		<p>
 		</p>
 		<p>
